--- a/views/base.pug
+++ b/views/base.pug
@@ -5,7 +5,7 @@ head
   meta(name='description' content='')
   meta(name='author' content='Mark Otto, Jacob Thornton, and Bootstrap contributors')
   meta(name='generator' content='Hugo 0.83.1')
-  title Speak Up &middot; Bootstrap v5.0
+  title Speak Up &middot; #{title}
   link(rel='canonical' href='https://getbootstrap.com/docs/5.0/examples/blog/')
   // Bootstrap core CSS
   link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css' integrity='undefined' crossorigin='anonymous')
@@ -33,7 +33,7 @@ head
   // Custom styles for this template
   link(href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900&display=swap' rel='stylesheet')
   // Custom styles for this template
-  link(href='css/blog.css' rel='stylesheet')
+  link(href='/css/blog.css' rel='stylesheet')
 
 body
   .container
