--- a/views/home.pug
+++ b/views/home.pug
@@ -9,91 +9,16 @@ block content
       p.lead.mb-0
         a.text-white.fw-bold(href='#') Continue reading...
   .row.mb-2
-    .col-md-6
-      .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
-        .col.p-4.d-flex.flex-column.position-static
-          strong.d-inline-block.mb-2.text-primary World
-          h3.mb-0 Featured post
-          .mb-1.text-muted Nov 12
-          p.card-text.mb-auto
-            | This is a wider card with supporting text below as a natural lead-in to additional content.
-          a.stretched-link(href='#') Continue reading
-        .col-auto.d-none.d-lg-block
-          svg.bd-placeholder-img(width='200' height='250' xmlns='http://www.w3.org/2000/svg' role='img' aria-label='Placeholder: Thumbnail' preserveaspectratio='xMidYMid slice' focusable='false')
-            title Placeholder
-            rect(width='100%' height='100%' fill='#55595c')
-            text(x='50%' y='50%' fill='#eceeef' dy='.3em') Thumbnail
-    .col-md-6
-      .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
-        .col.p-4.d-flex.flex-column.position-static
-          strong.d-inline-block.mb-2.text-success Design
-          h3.mb-0 Post title
-          .mb-1.text-muted Nov 11
-          p.mb-auto
-            | This is a wider card with supporting text below as a natural lead-in to additional content.
-          a.stretched-link(href='#') Continue reading
-        .col-auto.d-none.d-lg-block
-          svg.bd-placeholder-img(width='200' height='250' xmlns='http://www.w3.org/2000/svg' role='img' aria-label='Placeholder: Thumbnail' preserveaspectratio='xMidYMid slice' focusable='false')
-            title Placeholder
-            rect(width='100%' height='100%' fill='#55595c')
-            text(x='50%' y='50%' fill='#eceeef' dy='.3em') Thumbnail
+
+    each post in posts
+      .col-md-6
+        .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
+          .col.p-4.d-flex.flex-column.position-static
+            strong.d-inline-block.mb-2.text-primary World
+            h3.mb-0= post.title
+            .mb-1.text-muted= post.createdAt.toLocaleString('en-es', { month: 'long', year: 'numeric' })
+            p.card-text.mb-auto= post.body
+            a.stretched-link(href=`/posts/${post.slug}`) Continue reading
+          .col-auto.d-none.d-lg-block
+            img.bd-placeholder-img(width='200' height='250' src=`/img/posts/${post.coverImage}` alt=`${post.title}`)
     
-    .col-md-6
-      .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
-        .col.p-4.d-flex.flex-column.position-static
-          strong.d-inline-block.mb-2.text-success Design
-          h3.mb-0 Post title
-          .mb-1.text-muted Nov 11
-          p.mb-auto
-            | This is a wider card with supporting text below as a natural lead-in to additional content.
-          a.stretched-link(href='#') Continue reading
-        .col-auto.d-none.d-lg-block
-          svg.bd-placeholder-img(width='200' height='250' xmlns='http://www.w3.org/2000/svg' role='img' aria-label='Placeholder: Thumbnail' preserveaspectratio='xMidYMid slice' focusable='false')
-            title Placeholder
-            rect(width='100%' height='100%' fill='#55595c')
-            text(x='50%' y='50%' fill='#eceeef' dy='.3em') Thumbnail
-
-    .col-md-6
-      .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
-        .col.p-4.d-flex.flex-column.position-static
-          strong.d-inline-block.mb-2.text-success Design
-          h3.mb-0 Post title
-          .mb-1.text-muted Nov 11
-          p.mb-auto
-            | This is a wider card with supporting text below as a natural lead-in to additional content.
-          a.stretched-link(href='#') Continue reading
-        .col-auto.d-none.d-lg-block
-          svg.bd-placeholder-img(width='200' height='250' xmlns='http://www.w3.org/2000/svg' role='img' aria-label='Placeholder: Thumbnail' preserveaspectratio='xMidYMid slice' focusable='false')
-            title Placeholder
-            rect(width='100%' height='100%' fill='#55595c')
-            text(x='50%' y='50%' fill='#eceeef' dy='.3em') Thumbnail
-
-    .col-md-6
-      .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
-        .col.p-4.d-flex.flex-column.position-static
-          strong.d-inline-block.mb-2.text-success Design
-          h3.mb-0 Post title
-          .mb-1.text-muted Nov 11
-          p.mb-auto
-            | This is a wider card with supporting text below as a natural lead-in to additional content.
-          a.stretched-link(href='#') Continue reading
-        .col-auto.d-none.d-lg-block
-          svg.bd-placeholder-img(width='200' height='250' xmlns='http://www.w3.org/2000/svg' role='img' aria-label='Placeholder: Thumbnail' preserveaspectratio='xMidYMid slice' focusable='false')
-            title Placeholder
-            rect(width='100%' height='100%' fill='#55595c')
-            text(x='50%' y='50%' fill='#eceeef' dy='.3em') Thumbnail
-
-    .col-md-6
-      .row.g-0.border.rounded.overflow-hidden.flex-md-row.mb-4.shadow-sm.h-md-250.position-relative
-        .col.p-4.d-flex.flex-column.position-static
-          strong.d-inline-block.mb-2.text-success Design
-          h3.mb-0 Post title
-          .mb-1.text-muted Nov 11
-          p.mb-auto
-            | This is a wider card with supporting text below as a natural lead-in to additional content.
-          a.stretched-link(href='#') Continue reading
-        .col-auto.d-none.d-lg-block
-          svg.bd-placeholder-img(width='200' height='250' xmlns='http://www.w3.org/2000/svg' role='img' aria-label='Placeholder: Thumbnail' preserveaspectratio='xMidYMid slice' focusable='false')
-            title Placeholder
-            rect(width='100%' height='100%' fill='#55595c')
-            text(x='50%' y='50%' fill='#eceeef' dy='.3em') Thumbnail
