--- a/views/_header.pug
+++ b/views/_header.pug
@@ -2,11 +2,10 @@ header.blog-header.py-3
   .row.flex-nowrap.justify-content-between.align-items-center
     .col-4.pt-1
     .col-4.text-center
-      a.blog-header-logo.text-dark(href='#') SpeakUp
+      a.blog-header-logo.text-dark(href='/') SpeakUp
     .col-4.d-flex.justify-content-end.align-items-center
-      a.p-2.link-secondary(href='#') Posts
-      a.p-2.link-secondary(href='#') About
-      a.p-2.link-secondary(href='#') Contact
-      a.link-secondary(href='#' aria-label='Search')
-      a.btn.btn-sm.btn-outline-secondary(href='#') Sign up
-      a.btn.btn-sm.btn-outline-secondary.ms-2(href='#') Register
+      a.p-2.link-secondary(href='/') Posts
+      a.p-2.link-secondary(href='/about') About
+      a.p-2.link-secondary(href='/contact') Contact
+      a.btn.btn-sm.btn-outline-secondary(href='/login') Login
+      a.btn.btn-sm.btn-outline-secondary.ms-2(href='/register') Register
