Implemented the use registration.

--- a/views/base.pug
+++ b/views/base.pug
@@ -44,4 +44,7 @@ body
     //- WANT TO BE DYNAMIC
     block content
     
-  include _footer
+    include _footer
+    
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js")
+  script(src='/js/register.js')
