--- a/views/base.pug
+++ b/views/base.pug
@@ -47,4 +47,6 @@ body
     include _footer
     
   script(src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js")
+  script(src='/js/alerts.js')
   script(src='/js/register.js')
+  script(src='/js/login.js')
