Implemented My Post List and Update Post with cover image.

--- a/views/base.pug
+++ b/views/base.pug
@@ -50,3 +50,4 @@ body
   script(src='/js/alerts.js')
   script(src='/js/register.js')
   script(src='/js/login.js')
+  script(src='/js/updatePost.js')
